[tool.poetry]
name = "parcer-weather"
version = "0.1.0"
description = ""
authors = ["Evgeny <zakiev_e@mail.ru>"]
readme = "README.md"
packages = [{include = "parcer_weather"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.31.0"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
